Implemented sonarQube testing and ran build successfully